--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,10 @@
     --font-color-dark:#0e1111;
    
 }
+/*header*/
 .header{
-    width:1100px;
+    width:1200px;
+    height:900px;
     margin:auto;
     background-image:linear-gradient(45deg,var(--header-color)0%, white 100%);
 }
@@ -133,12 +135,14 @@ a:hover{
 .learn-more a{
     color:var(--link-hover);
     font-weight:600;
+    text-decoration: none;
 }
 .logos{
     display:grid;
     grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     grid-template-rows: repeat(auto-fit,minmax(200px,1fr));
     width:450px;
+    margin-right:20px;
 }
 .google{
     grid-row-start:1;
@@ -187,6 +191,7 @@ a:hover{
     grid-row-end:4;
     grid-column-start:4;
     grid-column-end:5;
+    
 }
 #asana,#atlassian,#calendar,#googleAds,#google,
 #paypal,#weave{
